# templates_training

./: CMakeLists.txt  README.md
legacy/: CMakeLists.txt
legacy/src/: example01.cpp  example02.cpp  example04.cpp  example05.cpp  fibonacci.cpp
modern/: CMakeLists.txt
